welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  if (isAsSleep==true){return false}
  if (isMorning==true){if(isMom){return true}return false}
  return true}